; ModuleID = '/home/carl/AnghaBench/linux/fs/afs/extr_fsclient.c_xdr_decode_AFSVolSync.c'
source_filename = "/home/carl/AnghaBench/linux/fs/afs/extr_fsclient.c_xdr_decode_AFSVolSync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.afs_volsync = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, %struct.afs_volsync*)* @xdr_decode_AFSVolSync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xdr_decode_AFSVolSync(i32** %0, %struct.afs_volsync* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca %struct.afs_volsync*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store %struct.afs_volsync* %1, %struct.afs_volsync** %4, align 8
  %7 = load i32**, i32*** %3, align 8
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = getelementptr inbounds i32, i32* %9, i32 1
  store i32* %10, i32** %5, align 8
  %11 = load i32, i32* %9, align 4
  %12 = call i32 @ntohl(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = getelementptr inbounds i32, i32* %13, i32 1
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = getelementptr inbounds i32, i32* %15, i32 1
  store i32* %16, i32** %5, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = getelementptr inbounds i32, i32* %17, i32 1
  store i32* %18, i32** %5, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = getelementptr inbounds i32, i32* %19, i32 1
  store i32* %20, i32** %5, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = getelementptr inbounds i32, i32* %21, i32 1
  store i32* %22, i32** %5, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i32**, i32*** %3, align 8
  store i32* %23, i32** %24, align 8
  %25 = load %struct.afs_volsync*, %struct.afs_volsync** %4, align 8
  %26 = icmp ne %struct.afs_volsync* %25, null
  br i1 %26, label %27, label %31

27:                                               ; preds = %2
  %28 = load i32, i32* %6, align 4
  %29 = load %struct.afs_volsync*, %struct.afs_volsync** %4, align 8
  %30 = getelementptr inbounds %struct.afs_volsync, %struct.afs_volsync* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  br label %31

31:                                               ; preds = %27, %2
  ret void
}

declare dso_local i32 @ntohl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
